<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".kayit">

    <TextView
        android:id="@+id/uygadi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kayitekrani"
        android:textAlignment="center"
        android:textSize="@dimen/_30sp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adiniz"
        android:inputType="text"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editsoyad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/soyadiniz"
        android:inputType="text"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editsifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sifre"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editsifreT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sifreT"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/editceptel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ceptel"
        android:inputType="phone"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/butonkayit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kayit"
        android:background="@color/kayitbuton"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        />


    <TextView
        android:id="@+id/yonlendirme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_25dp"
        android:text="@string/kayitekraniyonlendirme"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="@dimen/_15sp"
        android:textStyle="bold" />


</LinearLayout>