<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".giris">

    <TextView
        android:id="@+id/uygadi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/girisekrani"
        android:textAlignment="center"
        android:textSize="@dimen/_30sp"
        android:layout_marginTop="@dimen/_100dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/girisemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text"
        android:layout_marginTop="@dimen/_100dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:autofillHints="" />
    <EditText
        android:id="@+id/girissifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sifre"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        android:autofillHints="" />
    <Button
        android:id="@+id/girissayfasindakibuton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/giris"
        android:background="@color/kayitbuton"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginLeft="@dimen/_30dp"
        android:layout_marginRight="@dimen/_30dp"
        />

</LinearLayout>