<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guncelleme">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:text="MÜLK GÜNCELLE"
            android:textAlignment="center"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editbaslik2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/baslik"
            android:inputType="text"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/editadres2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adres"
            android:inputType="text"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/editucret2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ucret"
            android:inputType="number"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/editodasay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/odasayisi"
            android:inputType="number"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editisitma2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/isitma"
            android:inputType="text"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/editmetre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/metrekare"
            android:inputType="number"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:autofillHints="" />





        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tipsec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/mulktipi"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp"

                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnermulk2"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toRightOf="@+id/tipsec"
                android:textAlignment="center" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/kat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/katvar"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerkat2"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_117dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toRightOf="@+id/kat"
                android:textAlignment="center" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/balkon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/balkon"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp"

                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerbalkon2"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toRightOf="@+id/balkon"
                android:textAlignment="center" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ilsec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ilsec"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_50dp"

                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinneril2"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/ilsec"
                android:layout_marginLeft="@dimen/_110dp"
                android:layout_marginTop="@dimen/_10dp" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ilce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ilce"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_50dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerilce2"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/ilce"
                android:layout_marginLeft="@dimen/_90dp"
                android:layout_marginBottom="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/kiralamaturguncellemetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kiralamatürü"
                android:textAlignment="center"
                android:textSize="@dimen/_20sp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_50dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/kiralamaturguncelleme"
                android:layout_width="@dimen/_150dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_toRightOf="@+id/kiralamaturguncellemetext"
                android:layout_marginLeft="@dimen/_30dp"
                android:layout_marginBottom="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp" />


        </RelativeLayout>









        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/resimguncelle"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="91dp"
                android:layout_marginLeft="@dimen/_50dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="226dp"
                android:layout_marginBottom="27dp"
                android:text="Resim seç" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="222dp"
                android:layout_marginLeft="@dimen/_50dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="9dp"
                android:background="#2196F3"
                android:scaleType="fitXY" />


        </RelativeLayout>

        <Button
            android:id="@+id/mulkguncelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:text="Güncelle" />


    </LinearLayout>
</ScrollView>
